# ProjectExample

./: .gitignore  CMakeLists.txt  README.md
Dialogue/: CMakeLists.txt
Dialogue/source/: main.cpp
Locker/: CMakeLists.txt
Locker/include/Locker/: Locker.h
Locker/source/: Locker.cpp
Tests/: CMakeLists.txt
Tests/source/: TestCase1.cpp  main.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: getNumber.h
